# cyclecount

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
cyclecount/: rainflow.py
docs/source/: conf.py  index.rst
tests/: test_peak.py  test_rainflow.py
