[tool.poetry]
name = "cyclecount"
version = "0.1.0"
description = "Python package for cycle counting using the Rainflow method"
authors = ["Brett McSweeney <brett.mcsweeney@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15"
numba = "^0.42"

[tool.poetry.dev-dependencies]
pytest = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
